@@ -27,11 +27,21 @@ class WXDLLIMPEXP_FWD_CORE wxWindow;
 class WXDLLIMPEXP_CORE wxBusyInfo : public wxObject
 {
 public:
-    wxBusyInfo(const wxString& message, wxWindow *parent = NULL);
+    wxBusyInfo(const wxBusyInfoFlags& flags)
+    {
+        Init(flags);
+    }
+
+    wxBusyInfo(const wxString& message, wxWindow *parent = NULL)
+    {
+        Init(wxBusyInfoFlags().Parent(parent).Label(message));
+    }
 
     virtual ~wxBusyInfo();
 
 private:
+    void Init(const wxBusyInfoFlags& flags);
+
     wxFrame *m_InfoFrame;
 
     wxDECLARE_NO_COPY_CLASS(wxBusyInfo);
